<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_data"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/simpleImageView"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/image"
                    android:src="@drawable/front_page" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/string_fir"
                    android:textSize="7dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/string_sec"
                    android:textSize="7dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:gravity="center"
                    android:text="@string/string_first"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="3dp"
                    android:text="@string/string_first1"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/string_second"
                    android:textSize="16dp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:gravity="center"
                    android:text="@string/string_second1"
                    android:textSize="14dp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/string_pasuram_first"
                    android:textSize="9dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/string_pasuram_second"
                    android:textSize="9dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/string_pasuram_third"
                    android:textSize="9dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/string_pasuram_four"
                    android:textSize="9dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/ll_data">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/Layout_margin"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="147dp"
                        android:layout_height="180dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/image"
                        android:scaleType="fitXY"
                        android:src="@drawable/nammazhiwar" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="180dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/image"
                        android:scaleType="fitXY"
                        android:src="@drawable/illayavalli_swamy" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/Ending_margin"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_list"
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/round_corners"
                        android:padding="12dp"
                        android:text="@string/string_home1"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_register"
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/round_corners"
                        android:padding="12dp"
                        android:text="@string/string_register"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>


            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

</ScrollView>