<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/mainLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llay_front_page"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_corners_id"
            android:orientation="vertical"
            android:padding="7dp">

            <LinearLayout
                android:id="@+id/header_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/header_background"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/simpleImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_margin="3dp"
                    android:contentDescription="@string/image"
                    android:src="@drawable/front_page" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:text="@string/string_first"
                    android:textColor="@color/white"
                    android:textSize="7sp" />


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <ImageView
                        android:id="@+id/iv_image1"
                        android:layout_width="wrap_content"
                        android:layout_height="75dp"
                        android:layout_marginStart="5dp"
                        android:contentDescription="@string/image"
                        android:scaleType="fitStart"
                        android:src="@drawable/thiruvaimozhipillai_periya_swamy1" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">


                        <TextView
                            android:id="@+id/tv_thaniyan_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/string_thaniyan_id"
                            android:textColor="@color/white"
                            android:textSize="9sp" />


                        <TextView
                            android:id="@+id/tv_swamy_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/string_swamy_id"
                            android:textAppearance="@android:style/TextAppearance.Small.Inverse"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_swamy_adiyen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:text="@string/string_swamy_adiyen"
                            android:textAppearance="@android:style/TextAppearance.Small.Inverse"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/iv_image2"
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:layout_marginEnd="5dp"
                        android:contentDescription="@string/image"
                        android:scaleType="fitEnd"
                        android:src="@drawable/thiruvaimozhipillai_kutti_swamy1" />

                </RelativeLayout>

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="2dp"
                android:padding="2dp"
                android:background="@color/color_green" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/body_background"
                android:padding="5dp">


                <TextView
                    android:id="@+id/tv_id_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_adiyenname"
                    android:textColor="#0000CC"
                    tools:ignore="RelativeOverlap" />


                <TextView
                    android:id="@+id/tv_id_nativeplace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_id_name"
                    android:text="@string/string_place"
                    android:textColor="#0000CC" />

                <TextView
                    android:id="@+id/tv_id_cellno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_id_nativeplace"
                    android:text="@string/string_mobileno"
                    android:textColor="#0000CC" />


                <TextView
                    android:id="@+id/tv_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_id_cellno"
                    android:text="@string/string_reg_number"
                    android:textColor="#0000CC" />


                <ImageView
                    android:id="@+id/iv_profile_image"
                    android:layout_width="100dp"
                    android:layout_height="130dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/thiruvaimozhipillai_kutti_swamy" />


            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_green"
                android:padding="2dp"
                android:layout_marginTop="2dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:padding="2dp"
                android:text="@string/string_address"
                android:textColor="#0000CC"
                android:textSize="7sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_margin="5dp"
            android:padding="7dp"
            android:id="@+id/llay_back_page"
            android:background="@drawable/round_corners_id"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/text_background"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/string_permanent_address"
                        android:textAppearance="@android:style/TextAppearance.Small.Inverse"
                        android:textColor="#0000CC"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_per_address"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:lines="5"
                        android:padding="5dp"
                        android:textAppearance="@android:style/TextAppearance.Small.Inverse"
                        android:textColor="@android:color/black"
                        android:text="@string/string_thaniyan_id"
                        android:textStyle="normal" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="2dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.6"
                        android:background="@drawable/thiru_puli"
                        android:contentDescription="@string/app_name" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end|bottom" >

                        <ImageView
                            android:id="@+id/iv_alwar"
                            android:layout_width="50dp"
                            android:layout_height="75dp"
                            android:layout_gravity="bottom"
                            android:contentDescription="@string/image"
                            android:scaleType="fitXY"
                            android:layout_marginBottom="20dp"
                            android:layout_marginEnd="5dp"
                            android:src="@drawable/nammazhwar_new_img" />
                    </LinearLayout>

                </FrameLayout>




            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#0000CC"
                android:padding="2dp"
                android:layout_marginTop="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:padding="2dp"
                android:text="@string/string_if_found"
                android:textColor="#0000CC"
                android:textSize="9sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>
